# rustercam

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: package-release.sh
src/: app.rs  capture.rs  cli.rs  export.rs  frame.rs  main.rs  playback.rs  recording.rs  render.rs  ui.rs
