[package]
name = "rustercam"
version = "0.1.0"
edition = "2021"
description = "Rust port of terminalcam: realtime ASCII camera in the terminal"
license = "MIT"
repository = "https://github.com/hatute/rustercam"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
flate2 = "1.0"
rand = "0.8"
terminal_size = "0.3"
